--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -1,4 +1,3 @@
-
 .contacts-container__contacts {
 
     text-align: center;
@@ -59,19 +58,89 @@
     border: none;
 }
 
+/** Tablets, Ipads **/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .contacts-container__contacts {
+
+        text-align: center;
+
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+
+        min-height: 50vh;
+
+        margin: auto;
+    }
+
+    .title__contacts {
+        font-size: 0.9rem;
+        letter-spacing: 0.1rem;
+
+        padding-top: 5%;
+        margin: 3vh auto;
+    }
+
+    .contact-button__contacts {
+        margin: 3vh auto;
+
+        display: flex;
+
+        justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        height: 100%;
+    }
+
+    .contact-button__contacts a:any-link {
+        font-size: 0.8rem;
+        padding: 3vh;
+    }
+
+    .button-send__contacts {
+        padding: 0.3rem 0.8rem;
+        font-size: 0.6rem;
+        letter-spacing: 0.1rem;
+
+        border: 1px solid blue;
+        background-color: white;
+
+        cursor: pointer;
+    }
+
+    .social-links__contacts {
+        display: flex;
+        flex-direction: row;
+
+        justify-content: space-between;
+        align-items: center;
+
+        min-width: 20vw;
+        margin: 6vh auto;
+    }
+}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
 /** Mobile **/
 @media screen and (max-width: 768px) {
     .contacts-container__contacts {
 
         text-align: center;
-    
+
         display: flex;
         flex-flow: column;
         justify-content: center;
         align-items: center;
-    
+
         min-height: 60vh;
-        
+
         margin: auto;
     }
 
@@ -83,12 +152,12 @@
 
     .contact-button__contacts {
         margin: 3vh auto;
-    
+
         display: flex;
-    
+
         justify-content: center;
         align-items: center;
-    
+
         width: 100%;
         height: 100%;
     }
@@ -97,20 +166,20 @@
         padding: 0.3rem 0.8rem;
         font-size: 0.8rem;
         letter-spacing: 0.1rem;
-    
+
         border: 1px solid blue;
         background-color: white;
-    
+
         cursor: pointer;
     }
 
     .social-links__contacts {
         display: flex;
         flex-direction: row;
-    
+
         justify-content: space-between;
         align-items: center;
-    
+
         min-width: 50vw;
         margin: 3vh auto;
     }
