--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -10,7 +10,7 @@
 
     justify-content: center;
     align-items: center;
-    
+
     flex-direction: column;
 }
 
@@ -175,6 +175,83 @@ a:focus {
     }
 }
 
+/** Tablets, Ipads ( landscape ) **/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+    .header__intro h1 {
+        font-size: 2em;
+        letter-spacing: 0.5em;
+        transition: var(--TRANSITION-HEADER);
+        cursor: pointer;
+    }
+
+    .questions__intro {
+        display: flex;
+
+        justify-content: center;
+        align-items: center;
+    }
+
+    .questions__intro h1 {
+        font-size: 1.2em;
+        letter-spacing: 0.1em;
+        transition: var(--TRANSITION-QUESTIONS);
+    }
+
+    .answers__intro {
+        display: flex;
+        flex-direction: row;
+
+        align-items: center;
+        justify-content: space-around;
+
+        height: 30vh;
+
+        animation: answerKeyframesEnter var(--TRANSITION-LINKS);
+    }
+
+    .answer__intro {
+        color: var(--PRIMARY-COLOR);
+
+        border-bottom: 2px solid #DCE3FF;
+        border-radius: 15px 5px;
+
+        cursor: pointer;
+
+        padding: 10px 25px;
+        margin: 5px;
+
+        font-size: 1em;
+        font-weight: 200;
+        letter-spacing: 0.12em;
+        transition: var(--TRANSITION-LINKS);
+    }
+
+    .answer-descriptions__intro {
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        justify-content: center;
+
+        min-height: 40vh;
+
+        padding: 1em;
+        margin: 1em;
+
+        font-size: 0.8em;
+
+    }
+
+}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+
+
 /** Mobile **/
 
 @media screen and (max-width: 768px) {
@@ -201,26 +278,26 @@ a:focus {
     .answers__intro {
         display: flex;
         flex-direction: column;
-    
+
         align-items: center;
         justify-content: space-around;
-    
+
         height: 30vh;
-    
+
         animation: answerKeyframesEnter var(--TRANSITION-LINKS);
     }
 
     .answer__intro {
         color: var(--PRIMARY-COLOR);
-    
+
         border-bottom: 2px solid #DCE3FF;
         border-radius: 15px 5px;
-    
+
         cursor: pointer;
-    
+
         padding: 10px 25px;
         margin: 5px;
-    
+
         font-size: 0.8em;
         font-weight: 200;
         letter-spacing: 0.06em;
@@ -230,17 +307,17 @@ a:focus {
     .answer-descriptions__intro {
         display: flex;
         flex-direction: column;
-    
+
         align-items: center;
         justify-content: center;
-    
+
         min-height: 40vh;
 
         padding: 1em;
         margin: 1em;
-    
+
         font-size: 0.8em;
-    
+
     }
 
 }
