--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -1,4 +1,3 @@
-
 .container__questions {
     display: flex;
 
@@ -95,26 +94,76 @@
     padding: 20px 10px;
 }
 
-  /** Tablets, Ipads **/
+.navigation-container__questions {
+    display: flex;
 
-  @media (min-width: 768px) and (max-width: 1024px) {
-    
-   .container__questions {
+    justify-content: center;
+    align-items: center;
+
+    min-height: 20vh;
+    min-width: 50vw;
+}
+
+.navigation-next__questions {
+    padding: 0vw 5vw;
+}
+
+.navigation-next__questions button {
+    border: 1px solid blue;
+    background-color: white;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    padding: 15px;
+
+    cursor: pointer;
+}
+
+.navigation-next-disabled__questions button {
+    border: 1px solid rgb(1, 1, 121);
+    background-color: whitesmoke;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    padding: 15px;
+
+    cursor: not-allowed;
+}
+
+
+.navigation-back__questions {
+    padding: 0vw 5vw;
+}
+
+.navigation-back__questions button {
+    border: 1px solid blue;
+    background-color: white;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    padding: 15px;
+
+    cursor: pointer;
+}
+
+
+/** Tablets, Ipads **/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+    .container__questions {
         display: flex;
-    
+
         flex-flow: column nowrap;
-    
+
         justify-content: center;
         align-items: center;
-    
+
         min-height: 30vh;
-    
+
         margin: 1vh 3vw;
     }
 
     .container__titles__questions {
         display: flex;
-        
+
         justify-content: center;
         align-items: center;
 
@@ -134,22 +183,22 @@
 
     .question__questions {
         font-size: 0.7rem;
-    
+
         word-spacing: 0.1rem;
         letter-spacing: 0.05rem;
 
         margin: 3vh 3vw;
         min-height: 10vh;
     }
-    
+
     .answers__questions {
         display: flex;
-        
+
         flex-flow: row;
-    
+
         justify-content: center;
         align-items: center;
-    
+
         height: 10vh;
     }
 
@@ -157,18 +206,18 @@
         display: flex;
 
         margin: 1vh 1vw;
-    
+
         font-weight: 300;
         letter-spacing: 0.02em;
-    
+
         border-bottom: 2px solid #DCE3FF;
         padding: 10px 10px;
         border-radius: 15px 5px;
     }
-    
-  }
-  
-  /* 
+
+}
+
+/* 
     ##Device = Tablets, Ipads (landscape)
     ##Screen = B/w 768px to 1024px
   */
@@ -177,20 +226,20 @@
 @media screen and (max-width: 768px) {
     .container__questions {
         display: flex;
-    
+
         flex-flow: column nowrap;
-    
+
         justify-content: center;
         align-items: center;
-    
+
         min-height: 20vh;
-    
+
         margin: 1vh 3vw;
     }
 
     .container__titles__questions {
         display: flex;
-        
+
         justify-content: center;
         align-items: center;
 
@@ -210,22 +259,22 @@
 
     .question__questions {
         font-size: 0.7rem;
-    
+
         word-spacing: 0.1rem;
         letter-spacing: 0.05rem;
 
         margin: 3vh 3vw;
         min-height: 10vh;
     }
-    
+
     .answers__questions {
         display: flex;
-        
+
         flex-flow: column;
-    
+
         justify-content: center;
         align-items: center;
-    
+
         height: 10vh;
     }
 
@@ -233,10 +282,10 @@
         display: flex;
 
         margin: 1vh 1vw;
-    
+
         font-weight: 300;
         letter-spacing: 0.02em;
-    
+
         border-bottom: 2px solid #DCE3FF;
         padding: 10px 10px;
         border-radius: 15px 5px;
