--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -28,6 +28,7 @@
 
 .header__intro h1:hover {
     letter-spacing: 1px;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
     transition: var(--TRANSITION-HEADER);
     cursor: pointer;
 }
