--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -7,7 +7,7 @@
     align-items: center;
 
 
-    width: 50vw;
+    width: 60vw;
     height: 7vh;
 
     position: fixed;
@@ -28,10 +28,9 @@
 .menu li a:any-link {
     color: black;
     text-shadow: 1px 1px 2px whitesmoke;
-    font-weight: bold;
-    letter-spacing: 0.2rem;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
     transition: all 0.5s ease;
-
     margin: 0px;
     display: block;
     width: 100%;
@@ -110,7 +109,7 @@ ul li.active-page {
         color: black;
         text-shadow: 1px 1px 2px whitesmoke;
         font-weight: bold;
-        letter-spacing: 0.1rem;
+        letter-spacing: 0.08rem;
         transition: all 0.5s ease;
 
         margin: 0px;
@@ -118,7 +117,7 @@ ul li.active-page {
         width: 100%;
         height: 100%;
 
-        font-size: 0.9em;
+        font-size: 0.8em;
 
         text-align: center;
         padding: 1vh 0px;
@@ -141,7 +140,7 @@ ul li.active-page {
         background-color: white;
         pointer-events: "none";
         cursor: crosshair;
-    
+
         transition: all 550ms ease-in;
     }
 }
@@ -164,8 +163,8 @@ ul li.active-page {
         align-items: center;
 
 
-        width: 95vw;
-        height: 6vh;
+        width: 98vw;
+        height: 5vh;
 
         position: fixed;
         bottom: 0;
@@ -180,11 +179,9 @@ ul li.active-page {
     .menu li a:any-link {
         color: black;
         text-shadow: 1px 1px 2px whitesmoke;
-        font-weight: bold;
+        font-weight: 400;
         letter-spacing: 0.1rem;
         transition: all 0.5s ease;
-
-        margin: 0px;
         display: block;
         width: 100%;
         height: 100%;
@@ -197,7 +194,7 @@ ul li.active-page {
 
     .menu li {
         width: 15vw;
-        height: 3vh;
+        height: 4vh;
 
         display: flex;
 
@@ -208,11 +205,13 @@ ul li.active-page {
     }
 
     ul li.active-page {
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         background-color: white;
         pointer-events: "none";
         cursor: crosshair;
-    
+
+        font-size: 0.7em;
+
         transition: all 500ms ease-in;
     }
 
