--- a/src/components/Quiz/quiz.css
+++ b/src/components/Quiz/quiz.css
@@ -240,6 +240,18 @@
         border-radius: 15px 5px;
     }
 
+    .quiz-answer__quiz:hover,
+    .quiz-answer__quiz:focus {
+        cursor: pointer;
+
+        background-color: #fff8dc;
+        color: black;
+        border-bottom: 4px solid #DCE3FF;
+
+        transition: all 0.3s ease-in;
+        transform: scale(1.05);
+    }
+
     .answered__quiz {
         display: flex;
 
@@ -364,6 +376,19 @@
         border-bottom: 2px solid #DCE3FF;
         padding: 10px 10px;
         border-radius: 15px 5px;
+    }
+
+    .quiz-answer__quiz:hover,
+    .quiz-answer__quiz:active,
+    .quiz-answer__quiz:focus {
+        cursor: pointer;
+
+        background-color: #fff8dc;
+        color: black;
+        border-bottom: 4px solid #DCE3FF;
+
+        transition: all 0.4s ease-in;
+        transform: scale(1.05);
     }
 
     .answered__quiz {
