changed styling in intro

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -19,7 +19,7 @@
 
 .header__intro h1 {
     font-size: 4em;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.7em;
     transition: var(--TRANSITION-HEADER);
     cursor: pointer;
 }
@@ -27,7 +27,7 @@
 
 
 .header__intro h1:hover {
-    letter-spacing: 1px;
+    letter-spacing: 0.4em;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
     transition: var(--TRANSITION-HEADER);
     cursor: pointer;
@@ -53,7 +53,8 @@
 }
 
 .questions__intro h1:hover {
-    letter-spacing: 1px;
+    letter-spacing: 0.15em;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
     transition: var(--TRANSITION-QUESTIONS);
 }
 
