--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -47,7 +47,7 @@ section {
 }
 
 section.subintro__about {
-    width: 50vw;
+    width: 60vw;
     
 }
 
@@ -59,6 +59,9 @@ section.subintro__about h3 {
 .subintro-cols__about {
     display: flex;
     flex-direction: row;
+
+    align-items: flex-start;
+
 }
 section.subintro__about .col-extra__about {
     font-size: 1.2rem;
