--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -19,7 +19,8 @@
 
 .header__intro h1 {
     font-size: 4em;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
     transition: var(--TRANSITION-HEADER);
     cursor: pointer;
 }
@@ -27,7 +28,7 @@
 
 
 .header__intro h1:hover {
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
     transition: var(--TRANSITION-HEADER);
     cursor: pointer;
@@ -250,9 +251,29 @@ a:focus {
 /** Mobile **/
 
 @media screen and (max-width: 768px) {
+    .header__intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        width: 90wv;
+        height: 60vh;
+
+        text-align: center;
+
+    }
+
     .header__intro h1 {
-        font-size: 2em;
-        letter-spacing: 0.5em;
+        font-size: 1.6em;
+        letter-spacing: 0.1em;
+        transition: var(--TRANSITION-HEADER);
+        cursor: pointer;
+    }
+
+    .header__intro h1:hover {
+        letter-spacing: 0.05em;
+        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
         transition: var(--TRANSITION-HEADER);
         cursor: pointer;
     }
