--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -11,7 +11,7 @@
 
 .title__about h1 {
     font-size: 1.8rem;
-    margin: 5vh auto;
+    margin: 3vh auto;
 }
 
 .title__about a {
@@ -41,9 +41,13 @@ section {
     justify-content: center;
     align-items: center;
 
-    margin: 5vh auto;
+    margin: 1vh auto;
 
     flex-direction: column;
+}
+
+.profile__about {
+    margin: 1vh auto;
 }
 
 section.subintro__about {
@@ -88,9 +92,9 @@ img {
     justify-content: center;
     align-items: center;
 
-    margin: 2vh 2vh;
+    margin: 1vh 2vh;
 
-    min-height: 40vh;
+    min-height: 35vh;
 
 }
 
@@ -102,7 +106,7 @@ img {
 .tech-stack-column__about {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.4rem;
 }
 
 .tech-stack__about h1 {
@@ -221,7 +225,7 @@ img {
     .intro__about p {
         font-size: 0.8rem;
 
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
         word-spacing: 0.15rem;
         width: 80vw;
     }
@@ -234,6 +238,7 @@ img {
 
     section.subintro__about {
         width: 90vw;
+        margin: 1vh auto;
     }
 
     section.subintro__about h3 {
@@ -242,24 +247,37 @@ img {
 
     section.subintro__about p {
         font-size: 0.8rem;
-        padding: 0;
 
         align-items: flex-start;
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
         word-spacing: 0.1rem;
         word-wrap: break-word;
         text-indent: 3vh;
     }
 
+    section.subintro__about .col-extra__about {
+        font-size: 0.8rem;
+        padding: 2vh;
+    
+        width: 90vw;
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
+        word-spacing: 0.05rem;
+        word-wrap: break-word;
+        text-indent: 5vh;
+    }
+
+    .tech-stack__about {
+        margin: 1vh auto;
+    }    
     .tech-stack__about h1 {
         font-size: 1.8rem;
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
-        margin: auto 1vw;
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
+        margin: 1vh 1vw 3vh 1vw;
     }
 
     .tech-stack__about h2 {
         font-size: 0.9rem;
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
         margin: 1vh 2vw;
     }
 
@@ -267,13 +285,13 @@ img {
         margin: 1vh 9vw;
         list-style-type: upper-roman;
         font-size: 0.8rem;
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
 
-        margin-bottom: 15vh;
+        margin-bottom: 10vh;
     }
 
     .tech-stack__about ul li a {
         font-size: 0.8rem;
-        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
     }
 }
